## tslib 1.6

Changes since 1.5 are:
* tools/ts_uinput_start.sh that creates /dev/input/ts_uinput
* support for FreeBSD (experimental)
* bugfixes and performance improvements


## tslib 1.5

Changes since 1.4 are:
* fix ts_calibrate regression (creating the calibration file)
* restore full backwards compatibility for all old kernel headers
* 64 bit compatibility for test programs
* bugfixes


## tslib 1.4

Most notable changes since 1.3 are:
* added default input device names (for example /dev/input/ts)
* new API: ts_setup()
* support for Android (experimental)
* man page updates and fixes
* compatibility fixes
* bugfixes all over the place


## tslib 1.3
merge released this on 09 Jan 2017

Most notable changes since 1.2 are:
* user visible:
    - multitouch:
      tests/ts_print_mt
      tests/ts_print_raw_mt
      tests/ts_test_mt
    - tools/ts_uinput: daemon program offers an input event device to use, instead of tslib's API
    - new filter plugin: median filter
    - man pages

* user API:
    - ts_read_mt() and struct ts_sample_mt
    - ts_reconfig()

* misc:
    - support for multitouch in input-raw and filter plugins
    - bugfixes (partly found by Coverity)
    - build system fixes


## tslib 1.2
merge released this on 18 Nov 2016

Most notable changes since 1.1 are:
* user visible:
    new plugins, see below
    added ts_finddev program (via buildroot)

* hardware plugins:
    improved eGalax touchscreen support
    added support for eGalax 7200 and 7201 touchscreens
    added hardware plugin for WaveShare touchscreens

* filter plugins:
    bugfixes in variance plugin
    added debounce plugin
    added skip plugin

* misc:
    library versioning
    bugfixes and performance improvements


## tslib 1.1
kergoth released this on 8 Aug 2013

This release is compatible with tslib 1.0.
It includes many bug fixes, support for building with automake 1.13,
support for running in a different resolution than during calibration,