@@ -12,10 +12,10 @@
 SUBDIRS		= etc src plugins tests tools doc
 EXTRA_DIST	= autogen.sh README.markdown m4/external
 AM_DISTCHECK_CONFIGURE_FLAGS = --disable-dependency-tracking
-DISTCLEANFILES = $(PACKAGE)-$(LT_RELEASE).pc $(PACKAGE).pc
+DISTCLEANFILES = $(PACKAGE).pc
 
 ACLOCAL_AMFLAGS = -I m4/internal -I m4/external
 AUTOMAKE_OPTIONS = 1.6
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = $(PACKAGE)-$(LT_RELEASE).pc $(PACKAGE).pc
+pkgconfig_DATA = $(PACKAGE).pc
